<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <CheckBox android:id="@+id/use_selection_mask"
        style="@style/Widget.View.LabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_selection_mask"/>
    
    <!-- Mask List -->

    <ListView
        android:id="@+id/mask_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mask_add"
            style="@style/Widget.Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/action_add" />

        <Button
            android:id="@+id/mask_edit"
            style="@style/Widget.Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/action_edit" />

        <Button
            android:id="@+id/mask_remove"
            style="@style/Widget.Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/action_remove" />

        <Button
            android:id="@+id/mask_clear"
            style="@style/Widget.Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/action_clear" />
        
    </LinearLayout>

    <!-- Inventory Selection Flag -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/Widget.View.LabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selection_flag" />

        <TextView
            android:id="@+id/selection_flag"
            style="@style/Widget.View.ValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
    </LinearLayout>

    <!-- Inventory Session -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/Widget.View.LabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inventory_session" />

        <TextView
            android:id="@+id/session"
            style="@style/Widget.View.ValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Inventory Session Flag -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/Widget.View.LabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_flag" />

        <TextView
            android:id="@+id/session_flag"
            style="@style/Widget.View.ValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            style="@style/Widget.View.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_save" />


        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="BARCODE"
            android:visibility="gone"
            />


        <Button
            android:id="@+id/cancel"
            style="@style/Widget.View.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />
    </LinearLayout>

</LinearLayout>