<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Version Layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Demo Version -->
        <TextView
            style="@style/Widget.View.LabelTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/demo_version" />

        <TextView android:id="@+id/demo_version"
            style="@style/Widget.View.TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end" />

        <!-- Firmware Version -->
        <TextView
            style="@style/Widget.View.LabelTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/firmware_version" />

        <TextView android:id="@+id/firmware_version"
            style="@style/Widget.View.TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end" />

    </LinearLayout>

    <!-- Main Menu Layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- Menu Buttons -->


        <Button android:id="@+id/barcode"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:enabled="true"
            android:text="Barcode"
            android:textSize="20sp"

            />




        <Button android:id="@+id/read_memory"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:enabled="false"
            android:text="@string/menu_read"
            android:textSize="20sp"

            />

        <View android:layout_width="fill_parent" android:layout_height="3dp" />

        <Button android:id="@+id/write_memory"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:enabled="false"
            android:text="@string/menu_write"
            android:textSize="20sp"

            />

        <View android:layout_width="fill_parent" android:layout_height="3dp" />

        <Button
            android:id="@+id/inventory"
            android:layout_width="fill_parent"
            android:layout_height="80sp"
            android:enabled="false"
            android:text="@string/menu_inventory"
            android:textSize="20sp" />

        <View android:layout_width="fill_parent" android:layout_height="40dp" />

        <Button android:id="@+id/lock_memory"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:enabled="false"
            android:text="@string/menu_lock"
            android:textSize="20sp"

            />

        <View android:layout_width="fill_parent" android:layout_height="3dp" />

        <Button android:id="@+id/option"
            android:layout_width="fill_parent"
            android:layout_height="80sp"
            android:enabled="false"
            android:text="@string/menu_option"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Logo -->
    <ImageView android:id="@+id/app_logo"
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_disconnected_logo"
        android:contentDescription="@string/logo"/>

</LinearLayout>
