<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MemoryView" >
    
    <!-- Selection Mask -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#444444"
        android:orientation="vertical" >
        
	    <TextView android:id="@+id/selection"
	        style="@style/Widget.View.SelectMaskTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		android:color="#444444"
		/>
        
    </LinearLayout>
    
    <View android:layout_width="match_parent" android:layout_height="5dp" />
    
    <!-- Result Message -->
    <LinearLayout android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:gravity="center_horizontal|center_vertical"
	    android:background="@color/message_background"
	    android:orientation="horizontal" >
        
       	<ProgressBar 
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    android:gravity="center_horizontal|center_vertical"
            android:visibility="gone"/>
        
        <TextView 
            android:id="@+id/message"
            style="@style/Widget.View.MessageTextView"
            android:layout_width="match_parent"
            android:layout_height="52dp" />
            
    </LinearLayout>
    
    <View android:layout_width="match_parent" android:layout_height="5dp" />
    
    <!-- Read Memory Value -->
    <TextView 
        style="@style/Widget.View.LabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 	    android:gravity="center_vertical"
        android:text="@string/read_memory_value" />
    
    <ListView
        android:id="@+id/read_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border" />
    
    <View android:layout_width="match_parent" android:layout_height="5dp" />
    
    <!-- Read Memory Parameters -->
    <TextView 
        style="@style/Widget.View.LabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 	    android:gravity="center_vertical"
        android:text="@string/read_memory_param" />
	
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2.5"
	    android:background="@drawable/border" >
      
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center_vertical"
	        android:padding="3dp" >
	        
	        <!-- Tag Type -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
			    
			    <TextView
			        style="@style/Widget.View.LabelTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/tag_type" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/tag_type"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    
			</LinearLayout>
			
			<View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
				        
			<!-- Bank -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
			    
			    <TextView
			        style="@style/Widget.View.LabelTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/bank" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/bank"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    
			</LinearLayout>
			
			<View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Offset -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
			    
			    <TextView
			        style="@style/Widget.View.LabelTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/offset" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/offset"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    
			</LinearLayout>
			
			<View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Length -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
			    
			    <TextView
			        style="@style/Widget.View.LabelTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/length" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/length"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    
			</LinearLayout>
			
			<View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
	        
			<!-- Access Password -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
		
				<TextView 
				    style="@style/Widget.View.LabelTextView"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:text="@string/password"/>
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/password"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    			    	    
			</LinearLayout>
			
			<View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Power Gain -->
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >
			    
			    <TextView
			        style="@style/Widget.View.LabelTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/power_gain" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/power_gain"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			    
			</LinearLayout>
			
		    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
		    <!-- Operation Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
			    android:orientation="horizontal"
			    android:padding="3dp" >

                <TextView
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/operation_time" />
			    
			    <View android:layout_width="5dp" android:layout_height="5dp" />
			    
			    <TextView android:id="@+id/operation_time"
			        style="@style/Widget.View.ValueTextView"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
                
            </LinearLayout>
	        
        </LinearLayout>
        
    </ScrollView>
    
    <View android:layout_width="match_parent" android:layout_height="5dp" />
    
    <!-- Buttons -->
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableRow >
            
	        <Button android:id="@+id/action"
	         	style="@style/Widget.View.Button"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/action_read"

				android:background="@drawable/button_corners"
				android:textColor="#ffffff"
				/>

        </TableRow>

		<View android:layout_width="match_parent" android:layout_height="5dp" />

        <TableRow >
	        
	        <Button android:id="@+id/clear"
	         	style="@style/Widget.View.Button"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/action_clear"
				android:background="@drawable/button_corners"
				android:textColor="#ffffff"
				/>

			<View android:layout_width="5dp" android:layout_height="5dp" />
            
            <Button android:id="@+id/mask"
	         	style="@style/Widget.View.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_mask"
				android:background="@drawable/button_corners"
				android:textColor="#ffffff"
				/>

			<Switch
				android:id="@+id/switch1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="BARCODE"
				android:visibility="gone"
				/>


		</TableRow>
        
    </TableLayout>
    
</LinearLayout>
